spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -461,11 +461,15 @@ h1 {
 
 
 @media only screen and (max-device-width : 480px) {
+  .proj-preview {
+    max-width: 94%;
+  }
+
   .proj-wrap {
     border: 3px solid white;
     border-radius: 10px;
-    height: 700px;
-    width: 90%;
+    height: 640px;
+    width: auto;
   }
 
   .proj-title {
@@ -474,11 +478,11 @@ h1 {
 
   .proj-descrpt {
     font-size: 200%;
-    height: 200px;
+    height: 180px;
   }
 
   #desbot {
-    margin-top: 100px;
+    margin-top: 80px;
     height: 50px;
     font-size: 160%;
   }
@@ -489,7 +493,7 @@ h1 {
 
   .gitHicon {
     font-size: 70px;
-    margin-top: 100px;
+    margin-top: 80px;
   }
 
   .fa-link {
